CVS code -
- General:
	- Miscellaneous comment fixes. (DLR)
- files.c:
  get_full_path()
	- Remove unneeded assert. (DLR)
  do_writeout()
	- For consistency, when saving a file with no name, don't
	  allow overwriting an existing file when in restricted
	  mode. (DLR)

GNU nano 2.0.0 - 2006.11.06
- General:
	- Miscellaneous comment fixes. (DLR)
	- Add syntax for POV-Ray files.  New file doc/syntax/pov.nanorc;
	  changes to doc/nanorc.sample.in and doc/syntax/Makefile.am.
	  (Donnie Berkholz, minor tweaks by DLR)
- AUTHORS:
	- Update for the 2.0 branch of nano. (DLR)
- nano.spec.in:
	- Update links for the 2.0 branch of nano. (DLR)
	- Update for newer RPM-based distributions. (DLR, adapted from
	  the nano 1.3.12-1.1.spec file in Fedora Rawhide)
	- Delete the changelog section, as it hasn't been kept up to
	  date, and all its changes are documented here in any case.
	  (DLR)
- doc/faq.html:
	- Update links for the 2.0 branch of nano. (DLR)
- doc/nano.1, doc/nanorc.5, doc/rnano.1:
	- Add minor wording fixes. (DLR)
- doc/man/fr/nano.1, doc/man/fr/nanorc.5, doc/man/fr/rnano.1:
	- Updated manpage translations by Jean-Philippe Guérard.
- doc/nano.texi:
	- Add minor wording and punctuation fixes. (DLR)

GNU nano 1.9.99pre3 - 2006.10.25
- chars.c:
  nstrncasecmp()
	- When returning, use the "?" operator instead of an if/else
	  clause. (DLR)
- cut.c:
  do_cut_text()
	- When uncutting text in the process of copying it, always set
	  placewewant, as do_uncut_text() does, so that the current line
	  is always updated properly. (DLR)
- files.c:
  input_tab()
	- Since the field precision operator used in the sprintf() uses
	  ints and not size_t's, replace it with two strncpy()s, which
	  use size_t's, and a null termination. (DLR)
- help.c:
  parse_help_input()
	- Add 'E' and 'e' as aliases for Exit, for consistency with the
	  file browser. (DLR)
- m4/ac_define_dir.m4:
	- Import the latest version of this file from
	  http://autoconf-archive.cryp.to/ac_define_dir.m4. (DLR)